Cacti CHANGELOG

1.2.0
-issue#186: Cacti does not support jQueryUI 1.12.x
-issue#1072: CVE-2009-4112 with regard to exploiting Data Input methods
-issue#1097: When copying template user, enable that user, also template users should be disabled by default
-issue#1174: Disable drag and drop when tree is not in edit mode
-issue#1200: Aggregate Graphs can not include some classes of COMMENT
-issue#1383: CSRF Timeout does not obey session timeout
-issue#1408: Update SQL / Backtrace to use new clean_up_lines() function
-issue#1414: DSSTATS reports incorrectly that a data source does not exist
-issue#1420: Debian test suite reports issues 
-issue#1421: Fix issue when SQL had all bad modes, missing variable warning was generated
-issue#1426: Fix issue where remote poller was not using unique filenames when attempting to verify files
-issue#1437: Plugin install hover message sometimes shows line breaks rather than formatted text
-issue#1454: When using oid_regexp_parse, filter indexes to those that match
-issue#1503: Undefined function clearstatscache in DSSTATS
-issue#1507: When saving graph settings from the graph page, the graph template id should not be included
-issue#1510: New Graphs Undefined Variable $graph_template_name
-issue#1521: Force boost to be enabled when there are Remote Data Collectors
-issue#1528: Saving a device can result in WARNINGS related to string vs array handling
-issue#1529: Allow Aggregate Graphs to Sum Bandwidth and Percentile COMMENTS
-issue#1543: Graph Preview appends header=false too many times
-issue#1553: Poller does not set rrd_step_counter correctly if no steps taken
-issue#1559: CLI Output Issues due to over escaping
-issue#1560: Warning that escapeshellarg() is escaping a null
-issue#1574: User templates are not correctly being applied
-issue#1590: User Admin generates SQL error if user is not part of any groups
-issue#1602: PHP ERROR: Call to undefined function api_data_source_cache_crc_update()